added style changes

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#FF4081</color>
 
 
-    <color name="colorCustom">#BBDEFB</color>
+    <color name="colorCustom">#2ecc71</color>
+    <color name="colorAgree">#2ecc71</color>
 </resources>
