--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,47 +8,49 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/colorCustom"
+    android:background="#95a5a6"
     tools:context="kyrax.chozen.MainActivity">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Chozan"
-        android:textSize="30dp"
-        android:textColor="#ffffff"
-        android:id="@+id/textView3"
-        android:textAlignment="center" />
+    <!--<TextView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Chozan"-->
+        <!--android:textSize="30dp"-->
+        <!--android:textColor="#ffffff"-->
+        <!--android:id="@+id/textView3"-->
+        <!--android:textAlignment="center" />-->
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
+        android:id="@+id/card_view2"
         android:layout_gravity="center"
         android:layout_width="fill_parent"
         android:layout_height="100dp"
         android:layout_marginTop="20dp"
         card_view:cardCornerRadius="2dp"
         card_view:contentPadding="10dp"
-        android:layout_below="@+id/textView3"
+
         android:layout_centerHorizontal="true">
 
-    <RelativeLayout
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_gravity="center"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="wrap_content"
+        card_view:cardCornerRadius="2dp"
+        card_view:contentPadding="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/button_agree"
+        android:layout_below="@+id/card_view2">
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:layout_alignParentTop="true"/>
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_below="@+id/textView"/>
-    </RelativeLayout>
+
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
@@ -60,15 +62,21 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="36dp" />
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="36dp"
+        android:background="#16a085"
+        android:textColor="#fff" />
 
     <Button
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:text="@string/btn_reject"
         android:id="@+id/button_reject"
+
         android:layout_alignBottom="@+id/button_agree"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:background="#e74c3c"
+        android:textColor="#fff" />
 
 </RelativeLayout>
